--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<h1 class="text-center">Sign in</h1>
+
+<form class="form mt-3">
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input type="email" id="email" class="form-control" name="email" placeholder="Enter your email">
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" id="password" class="form-control" name="password" placeholder="Enter your password">
+  </div>
+  <button class="btn btn-lg btn-success btn-block"> Sign in</button>
+</form>
