--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
           <a class="nav-link active text-light" aria-current="page" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" routerLink="/login">Login</a>
+          <a class="nav-link text-light" routerLink="/login" *ngIf="!loggedIn">Login</a>
+          <a class="nav-link text-light" routerLink="/" *ngIf="loggedIn" (click)="logout()">Logout</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-light" href="#">Register</a>
