--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
           <a class="nav-link text-light" routerLink="/" *ngIf="loggedIn" (click)="logout()">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Register</a>
+          <a class="nav-link text-light" routerLink="/register" *ngIf="!loggedIn">Register</a>
         </li>
       </ul>
     </div>
