Add header for home page.

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<header class="bg-light py-5 home-header">
+  <div class="container px-5">
+    <div class="row gx-5 align-items-center justify-content-center">
+      <div class="col-lg-8 col-xl-7 col-xxl-6">
+        <div class="my-5 text-center text-xl-start">
+          <h1 class="display-5 fw-bolder text-light mb-5">RecipeApp</h1>
+          <p class="lead fw-normal text-light mb-4">Spice up those lazy mid-week dinners, ignite the little chef in you and get inspired to diverse your meals with our recipes!</p>
+          <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
+            <a class="btn btn-outline-light btn-lg px-4 me-sm-3" routerLink="/register">Register</a>
+            <a class="btn btn-success btn-lg px-4" routerLink="/login">Login</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://images.unsplash.com/photo-1535473895227-bdecb20fb157?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=80" alt="..." />
+      </div>
+    </div>
+  </div>
+</header>
