Add comments as markup for refactoring search html.

--- a/src/app/public/home/search/search.component.html
+++ b/src/app/public/home/search/search.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <!--Insert row-->
   <h1 class="text-center my-5">Search</h1>
   <h4 class="text-center">Search for recipes below</h4>
   <div class="container">
@@ -35,6 +36,7 @@
 
 
     </form>
+    <!--End row-->
     <section class="py-5">
       <div class="container px-5 my-5">
         <!--<div class="row gx-5 justify-content-center">
