--- a/src/app/public/registration/registration.component.html
+++ b/src/app/public/registration/registration.component.html
@@ -1,6 +1,6 @@
 <h1 class="text-center">Become a member</h1>
 
-<form [formGroup]="form" class="form mt-3" (submit)="submit()">
+<form [formGroup]="form" class="form mt-3 mb-5 p-3" (submit)="submit()">
   <div class="form-group">
     <label for="name">Name</label>
     <input formControlName="name" type="text" id="name" class="form-control" name="name" autocomplete="name" placeholder="Enter your name">
