--- a/src/app/private/lists/lists.component.html
+++ b/src/app/private/lists/lists.component.html
@@ -1,19 +1,34 @@
-<div class="contain">
+<div class="contain py-5">
   <div class="row">
-    <div class="col-sm-4">
-      <h1>Lists here</h1>
+    <div class="col-sm-6">
+      <h1 class="my-5">Lists here</h1>
       <form [formGroup]="form" class="form mt-3 mb-5 p-3" (submit)="submit()">
         <div class="form-group">
-          <label for="search">Email</label>
-          <input formControlName="search" type="text" id="search" class="form-control" name="search" autocomplete="email"
-                 placeholder="Enter your email">
+          <label for="title">Create new list</label>
+          <input formControlName="title" type="text" id="title" class="form-control my-3" name="title" autocomplete=""
+                 placeholder="New list">
         </div>
 
-        <button class="btn btn-lg btn-success btn-block mb-5"> Sign in</button>
+        <button class="btn btn-lg btn-success btn-block mb-5"> Create new list</button>
       </form>
+      <div *ngIf="lists !== undefined" class="row" >
+        <div class="row" >
+          <!--
+          [ngSwitch]="listId"
+          *ngSwitchCase="list.id"
+          -->
+          <ul class="list-group" *ngFor="let list of lists">
+
+            <a (click)="getId(list.id)" [routerLink]="[list.id]"><li class="list-group-item">{{list.title}}</li></a>
+
+          </ul>
+        </div>
+
+      </div>
     </div>
-    <div class="col-sm-8">
+    <div class="col-sm-6">
       <h2>list details here</h2>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
