Implement method to fill home page with random recipes. On click of recipe: take recipe id and send it to the recipeService with eventEmitter. On click of recipe card, navigate to recipe-details page.

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -16,4 +16,4 @@
     </div>
   </div>
 </header>
-<app-search></app-search>
+<app-search [recipes]="recipes" (emitRecipeId)="getRecipeId($event)"></app-search>
