--- a/src/app/public/home/search/search.component.html
+++ b/src/app/public/home/search/search.component.html
@@ -48,12 +48,12 @@
           </div>
         </div>-->
         <div class="row gx-5">
-          <div class="col-lg-4 mb-5">
-            <div class="card h-100 shadow border-0">
-              <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..." />
+          <div class="col-lg-4 mb-5" *ngFor="let recipe of recipes">
+            <div class="card h-100 shadow border-0" (click)="sendRecipeId(recipe.id)">
+              <img class="card-img-top" src="{{recipe.image}}" alt="" />
               <div class="card-body p-4">
                 <!--<div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>-->
-                <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Blog post title</h5></a>
+                <a class="text-decoration-none link-dark stretched-link" [routerLink]="['/recipe', recipe.id]"><h5 class="card-title mb-3">{{recipe.title}}</h5></a>
                 <p class="card-text mb-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
               <!--<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -69,15 +69,16 @@
               </div>-->
             </div>
           </div>
-          <div class="col-lg-4 mb-5">
+
+          <!--<div class="col-lg-4 mb-5">
             <div class="card h-100 shadow border-0">
               <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..." />
               <div class="card-body p-4">
-                <!--<div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>-->
+                &lt;!&ndash;<div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>&ndash;&gt;
                 <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Another blog post title</h5></a>
                 <p class="card-text mb-0">This text is a bit longer to illustrate the adaptive height of each card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
-              <!--<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+              &lt;!&ndash;<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                 <div class="d-flex align-items-end justify-content-between">
                   <div class="d-flex align-items-center">
                     <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
@@ -87,18 +88,18 @@
                     </div>
                   </div>
                 </div>
-              </div>-->
+              </div>&ndash;&gt;
             </div>
-          </div>
-          <div class="col-lg-4 mb-5">
+          </div>-->
+          <!--<div class="col-lg-4 mb-5">
             <div class="card h-100 shadow border-0">
               <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..." />
               <div class="card-body p-4">
-                <!--<div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>-->
+                &lt;!&ndash;<div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>&ndash;&gt;
                 <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">The last blog post title is a little bit longer than the others</h5></a>
                 <p class="card-text mb-0">Some more quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
-              <!--<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+              &lt;!&ndash;<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                 <div class="d-flex align-items-end justify-content-between">
                   <div class="d-flex align-items-center">
                     <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
@@ -108,9 +109,9 @@
                     </div>
                   </div>
                 </div>
-              </div>-->
+              </div>&ndash;&gt;
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </section>
