Write logic for fetching recipe by id and displaying its properties.

--- a/src/app/public/home/search/search.component.html
+++ b/src/app/public/home/search/search.component.html
@@ -53,7 +53,9 @@
               <img class="card-img-top" src="{{recipe.image}}" alt="" />
               <div class="card-body p-4">
                 <!--<div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>-->
-                <a class="text-decoration-none link-dark stretched-link" [routerLink]="['/recipe', recipe.id]"><h5 class="card-title mb-3">{{recipe.title}}</h5></a>
+
+                <!--[routerLink]="['/recipe', recipe.id]" put on line below-->
+                <a class="text-decoration-none link-dark stretched-link" ><h5 class="card-title mb-3">{{recipe.title}}</h5></a>
                 <p class="card-text mb-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
               <!--<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
