--- a/src/app/public/recipe-details/recipe-details.component.html
+++ b/src/app/public/recipe-details/recipe-details.component.html
@@ -1,1 +1,55 @@
-<p>recipe-details works!</p>
+<header class="masthead my-5" >
+  <div class="container position-relative">
+    <div class="row justify-content-center">
+      <div class="col-xl-6">
+        <div class="text-center text-dark">
+          <!-- Page heading-->
+          <h1 class="my-5">{{ recipe.title }}</h1>
+
+        </div>
+      </div>
+      <div class="col-xl-6 p-5">
+        <img class="img-fluid" src="{{ recipe.image }}" alt="">
+      </div>
+    </div> <!--row ends-->
+    <div class="row justify-content-start">
+      <div class="col-sm-6 my-5">
+
+      <p>Chocolate Chip Coconut Muffins is a <b>dairy free</b> breakfast. This recipe serves 12 and costs 63 cents per serving. One serving contains <b>274 calories</b>, <b>5g of protein</b>, and <b>11g of fat</b>. If you have sea salt, vanillan extract, coconut flakes, and a few other ingredients on hand, you can make it. 10 people have tried and liked this recipe. It is brought to you by Foodista. From preparation to the plate, this recipe takes roughly <b>roughly 45 minutes</b>. Taking all factors into account, this recipe <b>earns a spoonacular score of 25%</b>.</p>
+      </div>
+      <div class="col-sm-6 mb-5 p-5">
+
+        <p>list option goes here</p>
+          <!--*ngIf="loggedIn"-->
+        <div class="dropdown" *ngIf="loggedIn">
+          <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            Add to list
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li class="dropdown-item" *ngFor="let list of lists" (click)="userAddRecipe(list.id, recipe.title)">{{ list.title }}</li>
+          </ul>
+        </div>
+      </div>
+    </div> <!--row ends-->
+    <div class="row justify-content-start">
+      <div class="col-sm-6">
+        <h4>Dish types</h4>
+        <ul >
+          <li *ngFor="let dish of recipe.dishTypes">
+            {{ dish }}
+          </li>
+        </ul>
+      </div>
+      <div class="col-sm-6">
+        <h4>Diets</h4>
+          <p>{{ recipe.diets }}</p>
+      </div>
+    </div><!--row end -->
+    <div class="row justify-content-start my-3">
+      <div class="col-sm-4">
+      <h4>Instructions:</h4>
+      <p>{{ recipe.instructions}}</p>
+      </div>
+    </div>
+  </div>
+</header>
