--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-light" routerLink="/login" *ngIf="!loggedIn">Login</a>
+          <a class="nav-link text-light" routerLink="/user/list" *ngIf="loggedIn">My lists</a>
           <a class="nav-link text-light" routerLink="/" *ngIf="loggedIn" (click)="logout()">Logout</a>
         </li>
         <li class="nav-item">
