--- a/src/app/private/lists/recipe-list/recipe-list.component.html
+++ b/src/app/private/lists/recipe-list/recipe-list.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="col-sm d-flex justify-content-between">
     <a routerLink="">View details</a>
-    <button class="btn btn-danger" (click)="deleteRecipe(recipe.id)">Remove</button>
+    <button class="btn btn-danger" (click)="deleteRecipe(recipe.id, recipe.user_list_id)">Remove</button>
   </div>
 </div>
 </div>
