Connect routing from recipe-lists to detailed recipe page when clicking view details

--- a/src/app/private/lists/recipe-list/recipe-list.component.html
+++ b/src/app/private/lists/recipe-list/recipe-list.component.html
@@ -7,7 +7,7 @@
 
   </div>
   <div class="col-sm d-flex justify-content-between">
-    <a routerLink="">View details</a>
+    <a [routerLink]="['/recipe/' + recipe.recipe_id]">View details</a>
     <button class="btn btn-danger" (click)="deleteRecipe(recipe.id, recipe.user_list_id)">Remove</button>
   </div>
 </div>
