--- a/src/app/public/home/search/search.component.html
+++ b/src/app/public/home/search/search.component.html
@@ -14,8 +14,8 @@
         <label for="floatingInput" class="text-center">Search recipes</label>
 
         <div class="form-group">
-          <select name="diet" class="form-select">
-            <option disabled selected value="null">Choose a diet</option>
+          <select formControlName="diet" name="diet" class="form-select">
+            <option disabled selected value="">Choose a diet</option>
             <option value="gluten+free">Gluten free</option>
             <option value="vegan">Vegan</option>
             <option value="vegetarian">Vegetarian</option>
@@ -23,8 +23,8 @@
         </div>
 
         <div class="form-group">
-          <select name="dishTypes" class="form-select">
-            <option disabled selected value="null">Choose a dish type</option>
+          <select formControlName="dishTypes" name="dishTypes" class="form-select">
+            <option disabled selected value="">Choose a dish type</option>
             <option value="breakfast">Breakfast</option>
             <option value="dessert">Dessert</option>
             <option value="main+course">Main course</option>
